--- a/connections.html
+++ b/connections.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title></title>
+    <script type="text/javascript" src="/lcarssdk/js/jquery.js"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -9,11 +10,12 @@
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
 
-    <link rel="stylesheet" href="connections.css" />
-    <script src="connections.js"></script>
+    <link rel="stylesheet" href="/connections.css" />
+    
 </head>
-    <body>
-        <div id="map"></div>
-    </body>
+<body>
+    <div id="map"></div>
+    <script src="/connections.js"></script>
+</body>
 </html>
 
