--- a/connections.html
+++ b/connections.html
@@ -15,6 +15,21 @@
 </head>
 <body>
     <div id="map"></div>
+    <div id="divConnections">
+        <table>
+            <thead>
+                <tr>
+                    <th>Node</th>
+                    <th>Location</th>
+                    <th>Connected</th>
+                    <th>Transmitted</th>
+                </tr>
+            </thead>
+            <tbody id="tbodyConnections">
+                <!-- Connection rows will be populated here -->
+            </tbody>
+        </table>
+    </div>
     <script src="/connections.js"></script>
 </body>
 </html>
