--- a/connections.html
+++ b/connections.html
@@ -20,7 +20,7 @@
             <thead>
                 <tr>
                     <th>Node</th>
-                    <th>Location</th>
+                    <th>Callsign - Location</th>
                     <th>Connected</th>
                     <th>Transmitted</th>
                 </tr>
