--- a/connections.html
+++ b/connections.html
@@ -10,7 +10,7 @@
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
 
-    <link rel="stylesheet" href="connections.css" />
+    <link rel="stylesheet" href="/connections.css" />
     
 </head>
 <body>
@@ -30,7 +30,7 @@
             </tbody>
         </table>
     </div>
-    <script src="connections.js"></script>
+    <script src="/connections.js"></script>
 </body>
 </html>
 
