Added check boxes to begin enhancing UI

--- a/connections.html
+++ b/connections.html
@@ -15,6 +15,12 @@
     
 </head>
 <body>
+    <div id="controls">
+        <input type="checkbox" id="chkShowConnections" checked="checked" />
+        <label for="chkShowConnections">Show connections</label>
+        <input type="checkbox" id="chkZoomToTransmitter" />
+        <label for="chkZoomToTransmitter">Zoom to transmitter</label>
+    </div>
     <div id="map"></div>
     <div id="divConnections">
         <table>
