--- a/connections.html
+++ b/connections.html
@@ -3,6 +3,7 @@
 <head>
     <title></title>
     <script type="text/javascript" src="lcarssdk/js/jquery.js"></script>
+    <script type="text/javascript" src="/versionCheck.js"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -12,7 +13,7 @@
             crossorigin=""></script>
 
     <link rel="stylesheet" href="/connections.css" />
-    
+
 </head>
 <body>
     <div id="controls">
