--- a/connections.html
+++ b/connections.html
@@ -16,6 +16,10 @@
 
 </head>
 <body>
+    <div id="divLoading" class="center-screen">
+        Loading...
+    </div>
+
     <div id="controls">
         <input type="checkbox" id="chkShowConnections" checked="checked" />
         <label for="chkShowConnections">Show connections</label>
