--- a/connections.html
+++ b/connections.html
@@ -16,8 +16,8 @@
 
 </head>
 <body>
-    <div id="divLoading" class="center-screen">
-        Loading...
+    <div id="divLoadingContainer" class="center-screen">
+        <div id="divLoading">Loading...</div>
     </div>
 
     <div id="controls">
