--- a/connections.html
+++ b/connections.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <div id="divLoadingContainer" class="center-screen">
+    <div id="divLoadingContainer">
         <div id="divLoading">Loading...</div>
     </div>
 
