Changed table contents.

--- a/connections.html
+++ b/connections.html
@@ -32,9 +32,9 @@
             <thead>
                 <tr>
                     <th>Node</th>
-                    <th>Callsign - Location</th>
-                    <th>Connected</th>
-                    <th>Transmitted</th>
+                    <th>Callsign</th>
+                    <th>Location</th>
+                    <th>Frequency</th>
                 </tr>
             </thead>
             <tbody id="tbodyConnections">
