--- a/connections.html
+++ b/connections.html
@@ -19,14 +19,11 @@
     <div id="divLoadingContainer">
         <div id="divLoading">Loading...</div>
     </div>
-
+    <div id="map"></div>
     <div id="controls">
-        <input type="checkbox" id="chkShowConnections" checked="checked" />
-        <label for="chkShowConnections">Show connections</label>
-        <input type="checkbox" id="chkZoomToTransmitter" />
+        <input type="checkbox" id="chkZoomToTransmitter" checked="checked" />
         <label for="chkZoomToTransmitter">Zoom to transmitter</label>
     </div>
-    <div id="map"></div>
     <div id="divConnections">
         <table>
             <thead>
